--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.8.4
 
 Package: python-jmespath
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-ply (= 3.4) | python3-ply (= 3.4)
+Depends: ${misc:Depends}, ${python:Depends}, python-ply (>= 3.4) | python3-ply (>= 3.4)
 XB-Python-Version: ${python:Versions}
 Provides: ${python:Provides}
 Description: JSON Matching Expressions
